@@ -2,7 +2,7 @@ sg3-utils (1.48-0.1) unstable; urgency=low
 
   * New upstream version
 
- -- Douglas Gilbert <dgilbert@interlog.com>  Fri, 01 Jul 2022 14:00:00 -0400
+ -- Douglas Gilbert <dgilbert@interlog.com>  Fri, 07 Oct 2022 22:00:00 +0200
 
 sg3-utils (1.47-0.1) unstable; urgency=low
 
